# fastIni

./: .gitignore  run.sh  test.sh
FastIni/: CMakeLists.txt
FastIni/example/: CMakeLists.txt  test.ini
FastIni/example/src/: main.c
FastIni/tests/: CMakeLists.txt
FastIni/tests/unit/: CMakeLists.txt  conanfile.txt
FastIni/tests/unit/src/: FastIniUnitTest.cpp
conan/: runConan.sh  startConanServer.sh
